Fault_Injection/virtual-service-reviews-test-abort.yaml
### 의도적으로 HTTP 실패 발생


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v3
    fault:
      abort:
        percentage:
          value: 50
        httpStatus: 500
